# amplifier-module-provider-openai-chatgpt

./: .gitignore  README.md  SUPPORT.md  pyproject.toml
.amplifier/digital-twin-universe/acceptance-tests/: chatgpt-provider.yaml
.amplifier/digital-twin-universe/profiles/: chatgpt-provider-reality-check.yaml
amplifier_module_provider_openai_chatgpt/: __init__.py  _sse.py  models.py  oauth.py  provider.py
docs/: DTU_VALIDATION.md
docs/plans/: 2026-04-22-bug-fix-audit.md  2026-04-22-chatgpt-provider-implementation.md
routing/: openai-chatgpt-test.yaml  openai-chatgpt.yaml
tests/: test_models.py  test_oauth.py  test_provider.py  test_sse.py
