[project]
name = "amplifier-module-provider-openai-chatgpt"
version = "0.1.0"
description = "ChatGPT subscription auth provider module - raw httpx + manual SSE against the ChatGPT backend API for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "amplifier-core>=1.3.3",
    "httpx>=0.27.0",
]

[project.entry-points."amplifier.modules"]
provider-openai-chatgpt = "amplifier_module_provider_openai_chatgpt:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_provider_openai_chatgpt"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core>=1.3.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]
